--- a/Css HAmberger Tutorial/index.html
+++ b/Css HAmberger Tutorial/index.html
@@ -11,7 +11,7 @@
     <input type="checkbox">
     <div class="hamburger-lines">
         <span class="line line1"></span>                                            <!-- iaha par ham div bhi bana sakteb ha -->
-        <span class="line line2"></span>                                            <!-- hambuger ki lines span1  1line restively other all -->
+        <span class="line line2"></span>                                            <!-- hambuger ki lines span1  1line respectively other all -->
         <span class="line line3"></span>
     </div>
     <ul class="menu-items">
